fixes issues with navbar making the layout to overflow on mobile

--- a/assets/stylesheets/_custom.scss
+++ b/assets/stylesheets/_custom.scss
@@ -96,8 +96,8 @@ header {
 .navbar-default {
     background: transparent;
     border: none;
-    width: 109%;
-    margin-left: -15px;
+    //width: 109%;
+    //margin-left: -15px;
     .navbar-header {
         background: $dkBlue;
     }
